Cherry-pick 8900c3f92d08. rdar://problem/103539387

Function epxression, class expression and template literal should reset noLHSCount
    https://bugs.webkit.org/show_bug.cgi?id=247606
    rdar://102148789

    Reviewed by Mark Lam and Justin Michaud.

    While they can parse Expression internally, it does not mean that it is involved in the last part of this expression,
    since they are PrimaryExpression. Thus we should save and restore noLHSCount for them.

    * JSTests/stress/class-expression-assignment.js: Added.
    (A):
    * JSTests/stress/function-expression-assignment.js: Added.
    (a):
    * JSTests/stress/template-literal-assignment.js: Added.
    * Source/JavaScriptCore/parser/Parser.cpp:
    (JSC::Parser<LexerType>::parseClassExpression):
    (JSC::Parser<LexerType>::parseFunctionExpression):
    (JSC::Parser<LexerType>::parseTemplateLiteral):

    Canonical link: https://commits.webkit.org/256500@main

Canonical link: https://commits.webkit.org/252432.966@safari-7614-branch